Add preliminary modeling notebook with simple extrapolation and approach outline

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -86,6 +86,115 @@
                 "- Mobile money accounts: ~135-140 million (2025 est.), but active ~15-16%\n",
                 "- NDPS 2026-2030 targets: 60% active accounts by 2030, narrow rural-urban/gender gaps"
             ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "2c01587f",
+            "metadata": {},
+            "source": [
+                "# 02 – Data Enrichment Ideas\n",
+                "\n",
+                "Sources to add as proxies/leading indicators:\n",
+                "\n",
+                "- Direct: Agent density, POS terminals, transaction volumes (NBE reports)\n",
+                "- Enablers: Smartphone penetration, 4G coverage, electricity access\n",
+                "- Recent: Telebirr users ~58.6M (2026), M-Pesa active >5M (90-day)\n",
+                "- Active usage rate low → focus on deepening\n",
+                "\n",
+                "Plan: Create annual proxy series (e.g. mobile money accounts per adult, transaction value % GDP)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 6,
+            "id": "f5617df5",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "   year  telebirr_users_m  mobile_money_accounts_m  active_rate_pct\n",
+                        "0  2021               NaN                      NaN              NaN\n",
+                        "1  2023             -31.0                      NaN              NaN\n",
+                        "2  2024             -51.0                      NaN              NaN\n",
+                        "3  2025             -56.0                    135.0             15.0\n",
+                        "4  2026              58.6                    140.0             16.0\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# Example: manual addition of recent proxy points\n",
+                "proxy_data = {\n",
+                "    'year': [2021, 2023, 2024, 2025, 2026],\n",
+                "    'telebirr_users_m': [None, ~30, ~50, ~55, 58.6],\n",
+                "    'mobile_money_accounts_m': [None, None, None, 135, 140],\n",
+                "    'active_rate_pct': [None, None, None, 15, 16]\n",
+                "}\n",
+                "\n",
+                "df_proxy = pd.DataFrame(proxy_data)\n",
+                "print(df_proxy)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "1ad1ef2d",
+            "metadata": {},
+            "source": [
+                "# 03 – Preliminary Forecasting Approach\n",
+                "\n",
+                "Challenges: Sparse Findex (triennial), demand vs supply mismatch.\n",
+                "\n",
+                "Approach:\n",
+                "1. Baseline time series (linear/exponential on Findex + proxies)\n",
+                "2. Intervention dummies (Telebirr 2021, M-Pesa 2023, interoperability, Fayda, NDPS 2026)\n",
+                "3. Scenarios: Baseline (slow +3-5pp/year), Optimistic (+8-12pp with usage focus)\n",
+                "\n",
+                "Illustrative forecast (placeholder – replace with Prophet/ARIMAX later)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 7,
+            "id": "7078b816",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Linear extrapolation:\n",
+                        "2025: 54.8%\n",
+                        "2026: 57.7%\n",
+                        "2027: 60.5%\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# Simple linear extrapolation (demo only)\n",
+                "from sklearn.linear_model import LinearRegression\n",
+                "import numpy as np\n",
+                "\n",
+                "X = np.array(df_findex.index).reshape(-1,1)\n",
+                "y = df_findex['account_ownership_pct']\n",
+                "\n",
+                "model = LinearRegression().fit(X, y)\n",
+                "\n",
+                "future_years = np.array([2025, 2026, 2027]).reshape(-1,1)\n",
+                "pred = model.predict(future_years)\n",
+                "\n",
+                "print(\"Linear extrapolation:\")\n",
+                "for y, p in zip([2025,2026,2027], pred):\n",
+                "    print(f\"{y}: {p:.1f}%\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "ccce13e3",
+            "metadata": {},
+            "outputs": [],
+            "source": []
         }
     ],
     "metadata": {
