Update CI: separate lint rules for notebooks, ignore F821 undefined names

--- a/notebooks/02_task2_eda.ipynb
+++ b/notebooks/02_task2_eda.ipynb
@@ -437,8 +437,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "dcd67b25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensure pandas is available\n",
+    "if 'pd' not in globals():\n",
+    "\timport pandas as pd\n",
+    "\n",
+    "# Ensure obs exists (create from df if needed), then extract access, usage, events\n",
+    "if 'obs' not in globals() or obs is None:\n",
+    "\tif 'df' not in globals():\n",
+    "\t\t# attempt to load the expected processed CSV used elsewhere in this notebook\n",
+    "\t\tdf = pd.read_csv(\"../data/processed/ethiopia_fi_unified_enriched_20260131.csv\", parse_dates=['observation_date'])\n",
+    "\tobs = df[df['record_type'] == 'observation'].copy()\n",
+    "\n",
+    "access = obs[obs['indicator_code'] == 'ACC_OWNERSHIP'].sort_values('observation_date').copy()\n",
+    "usage = obs[obs['indicator_code'] == 'USG_DIGITAL_PAYMENT'].sort_values('observation_date').copy()\n",
+    "\n",
+    "# Canonical event dates used elsewhere in the notebook\n",
+    "events = {\n",
+    "\t'Telebirr launch': pd.to_datetime('2021-05-01'),\n",
+    "\t'M-Pesa entry': pd.to_datetime('2023-08-01'),\n",
+    "\t'NDPS launch': pd.to_datetime('2025-12-08'),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b8874d51",
+   "id": "cda0b318",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -460,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.12"
   }
  },
  "nbformat": 4,
