fix(notebook): define model_access and build usage frame to prevent NameError

--- a/notebooks/04_task4_forecasting.ipynb
+++ b/notebooks/04_task4_forecasting.ipynb
@@ -48,6 +48,7 @@
     "import seaborn as sns\n",
     "import statsmodels.api as sm\n",
     "from datetime import datetime\n",
+    "from pathlib import Path\n",
     "\n",
     "pd.set_option('display.max_columns', 60)\n",
     "sns.set_style(\"whitegrid\")\n",
@@ -55,14 +56,41 @@
     "# ────────────────────────────────────────────────\n",
     "# LOAD ENRICHED DATA (from Task 1/2)\n",
     "# ────────────────────────────────────────────────\n",
-    "ENRICHED_PATH = \"../data/processed/ethiopia_fi_unified_enriched_20260131.csv\"  # update if newer version\n",
+    "PROJECT_ROOT = Path.cwd()\n",
+    "if not (PROJECT_ROOT / \"data\").exists():\n",
+    "    PROJECT_ROOT = PROJECT_ROOT.parent\n",
+    "ENRICHED_PATH = PROJECT_ROOT / \"data\" / \"processed\" / \"ethiopia_fi_unified_enriched_20260131.csv\"\n",
     "\n",
     "df = pd.read_csv(ENRICHED_PATH, parse_dates=['observation_date'])\n",
     "print(\"Loaded shape:\", df.shape)\n",
     "\n",
     "# Filter observations\n",
     "obs = df[df['record_type'] == 'observation'].copy()\n",
-    "obs['year'] = obs['observation_date'].dt.year.astype(float)  # for regression"
+    "obs['year'] = obs['observation_date'].dt.year.astype(float)  # for regression\n",
+    "\n",
+    "# Keep national/all rows for a cleaner trend series\n",
+    "obs_national = obs[obs['gender'].fillna('all') == 'all'].copy()\n",
+    "\n",
+    "# Build access and usage modeling frames expected by later cells\n",
+    "access = obs_national[obs_national['indicator_code'] == 'ACC_OWNERSHIP'][['observation_date', 'year', 'value_numeric']].copy()\n",
+    "access = access.rename(columns={'value_numeric': 'access_pct'}).sort_values('observation_date')\n",
+    "\n",
+    "usage = obs_national[obs_national['indicator_code'] == 'USG_DIGITAL_PAYMENT'][['observation_date', 'year', 'value_numeric']].copy()\n",
+    "usage = usage.rename(columns={'value_numeric': 'usage_pct'}).sort_values('observation_date')\n",
+    "\n",
+    "events = {\n",
+    "    'telebirr': '2021-05-17',\n",
+    "    'mpesa': '2023-08-01',\n",
+    "    'fayda': '2024-01-01',\n",
+    "    'ndps': '2025-12-08',\n",
+    "}\n",
+    "\n",
+    "for name, date in events.items():\n",
+    "    ts = pd.Timestamp(date)\n",
+    "    access[f'dummy_{name}'] = (access['observation_date'] >= ts).astype(int)\n",
+    "    usage[f'dummy_{name}'] = (usage['observation_date'] >= ts).astype(int)\n",
+    "\n",
+    "print('Access points:', len(access), '| Usage points:', len(usage))"
    ]
   },
   {
@@ -125,7 +153,7 @@
    ],
    "source": [
     "# Future years (quarterly for smoother viz, but annual report)\n",
-    "future_years = pd.date_range(start='2025-01-01', end='2027-12-31', freq='Q')\n",
+    "future_years = pd.date_range(start='2025-01-01', end='2027-12-31', freq='QE-DEC')\n",
     "future_df = pd.DataFrame({'observation_date': future_years})\n",
     "future_df['year'] = future_df['observation_date'].dt.year + future_df['observation_date'].dt.quarter/4 - 0.125  # mid-quarter approx\n",
     "\n",
